--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
