--- a/Backend/src/main/resources/application.yaml
+++ b/Backend/src/main/resources/application.yaml
@@ -37,10 +37,10 @@ spring:
 
 logging:
   level:
+    root: INFO
     org:
       springframework:
         security: TRACE
-
        
 #  logging:
 #    level:
